# clerkb

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  config.toml.sample  package.json
.github/workflows/: node.js.yml  rust.yml
c/: poa.c  state.c
scripts/: check_binary_hashes.sh  checksums.txt
src/: config.rs  config.ts  config_schema.json  error.rs  generator.ts  index.ts  main.rs
tests/: Cargo.toml
tests/src/: hash_tests.rs  lib.rs  poa_tests.rs  state_tests.rs
