[package]
name = "clerkb"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
bytes = "0.5.6"
clap = "2.33.3"
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0" }
env_logger = "0.7"
futures = "0.3.0"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
surf = "1.0.3"
thiserror = "1.0"
toml = "0.5"
